manifests/giropops/2.app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  namespace: giropops
  labels:
    app: giropops-senhas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: mmazoni/linuxtips-giropops-senhas:3.0
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        imagePullPolicy: Always
        securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
