manifests/giropops/2.redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: giropops
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: cgr.dev/chainguard/redis:latest
        ports:
        - containerPort: 6379
        imagePullPolicy: Always
